fix: wrap gallery for mobile

--- a/src/styles/Project.module.scss
+++ b/src/styles/Project.module.scss
@@ -13,6 +13,7 @@
 .gallery {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
   max-width: 1440px;
